# X-View

./: CMakeLists.txt  Doxyfile.in  README.md  dependencies.rosinstall  mainpage.dox  new_old_CMakeLists.txt  oldCMakeList.txt  package.xml
include/x_view_core/: README.md  x_view.h  x_view_locator.h  x_view_tools.h  x_view_types.h
include/x_view_core/datasets/: abstract_dataset.h  airsim_dataset.h  streetview_dataset.h  synthia_dataset.h
include/x_view_core/features/: abstract_descriptor.h  graph.h  graph_descriptor.h
include/x_view_core/landmarks/: abstract_semantic_landmark.h  graph_landmark.h  semantic_landmark_factory.h
include/x_view_core/landmarks/graph_landmark/: blob.h  blob_extractor.h  depth_projector.h  graph_builder.h  graph_drawer.h  graph_landmark.h  graph_landmark_types.h
include/x_view_core/matchers/: abstract_matcher.h  graph_matcher.h
include/x_view_core/matchers/graph_matcher/: graph_matcher.h  graph_merger.h  random_walker.h  similarity_plotter.h  vertex_similarity.h
include/x_view_core/parameters/: parameters.h
include/x_view_core/timer/: abstract_timer.h  null_timer.h  timer.h  timer_printer.h
src/: README.md  x_view.cc  x_view_locator.cc  x_view_tools.cc
src/datasets/: abstract_dataset.cc  airsim_dataset.cc  streetview_dataset.cc  synthia_dataset.cc
src/features/: abstract_descriptor.cc  graph.cc  graph_descriptor.cc
src/landmarks/: abstract_semantic_landmark.cc  semantic_landmark_factory.cc
src/landmarks/graph_landmark/: blob.cc  blob_extractor.cc  depth_projector.cc  graph_builder.cc  graph_drawer.cc  graph_landmark.cc
src/matchers/graph_matcher/: graph_matcher.cc  graph_merger.cc  random_walker.cc  similarity_plotter.cc  vertex_similarity.cc
src/parameters/: parameters.cc
src/timer/: null_timer.cc  timer.cc  timer_printer.cc
test/: README.md  random_graph_accuracy_study.cc  test_argsort.cc  test_argsort.h  test_argsort_main.cc  test_camera_projection.cc  test_camera_projection.h  test_camera_projection_main.cc  test_common.cc  test_common.h  test_graph_duplicate_removal.cc  test_graph_duplicate_removal.h  test_graph_duplicate_removal_main.cc  test_graph_landmark.cc  test_graph_landmark.h  test_graph_landmark_main.cc  test_graph_landmark_matcher.cc  test_graph_landmark_matcher.h  test_graph_landmark_matcher_main.cc  test_graph_merger.cc  test_graph_merger.h  test_graph_merger_main.cc  test_histogram_landmark.cc  test_histogram_landmark.h  test_histogram_landmark_main.cc  test_main.cc  test_mcgregor_matching.cc  test_mcgregor_matching.h  test_mcgregor_matching_main.cc  test_param_tree.cc  test_param_tree.h  test_param_tree_main.cc  test_random_walk.cc  test_random_walk.h  test_random_walk_main.cc  test_timer.cc  test_timer.h  test_timer_main.cc  test_vertex_similarity.cc  test_vertex_similarity.h  (+1 more)
