<?xml version="1.0"?>
<package format="2">
    <name>x_view_core</name>
    <version>0.0.1</version>
    <description>x_view_core</description>

    <maintainer email="gawela@ethz.ch">Abel Gawel</maintainer>
    <maintainer email="deldonc@student.ethz.ch">Carlo Del Don</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <depend>cv_bridge</depend>
    <depend>doxygen_catkin</depend>
    <depend>gflags_catkin</depend>
    <depend>glog_catkin</depend>
    <depend>gtsam_catkin</depend>
    <depend>minkindr</depend>
    <depend>minkindr_gtsam</depend>
    <depend>opencv3_catkin</depend>
    <depend>opencv_blobs_catkin</depend>
    <depend>pcl_ros</depend>
    <depend>libnabo</depend>

</package>

