<?xml version="1.0"?>
<package format="2">
    <name>x_view_core</name>
    <version>0.0.1</version>
    <description>x_view_core</description>

    <maintainer email="gawela@ethz.ch">Abel Gawel</maintainer>
    <maintainer email="deldonc@student.ethz.ch">Carlo Del Don</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>cv_bridge</depend>
    <depend>doxygen</depend>
    <depend>gflags</depend>
    <depend>glog</depend>
    <depend>minkindr</depend>
    <depend>gtsam</depend>
    <depend>opencv3</depend>
    <depend>opencvblobslib</depend>
    <depend>pcl_ros</depend>
    <depend>libnabo</depend>

</package>

